--- a/index.html
+++ b/index.html
@@ -2,33 +2,25 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
-<nav id="navBar">
-    
-    <div id="navLogo">
-
-    </div>
-    <div id="navBio">
-
-    </div>
-    <div id="navResume">
-
-    </div>
-    <div id="navContact">
-
-    </div>
-    <div id="Projects">
-
-    </div>
-
-</nav>
 
 <body id="pageContent">
 
+    <div id="navContainer">
+        <img id="navLogo" class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
+          <button class="navButtons"> <a id="navBio" class="navLinks">Bio</a> </button>
+          <button class="navButtons"> <a id="navResume" class="navLinks">Resume</a> </button>
+          <button class="navButtons"> <a id="navContact" class="navLinks">Contacts</a> </button>
+          <button class="navButtons"> <a id="navProjects" class="navLinks">Projects</a> </button>
+    </div>
+
+    <img id="pageBG" src="imgs/pcBackground.jpg">
+       
 </body>
 
 <footer>
