Fixed embeded repository

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="pageContent">
-
+    <img id="pageBG" src="imgs/an60fKt.jpg">
     <div id="navContainer">
         <img id="navLogo" class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
           <button class="navButtons"> <a id="navBio" class="navLinks">Bio</a> </button>
@@ -18,8 +18,6 @@
           <button class="navButtons"> <a id="navContact" class="navLinks">Contacts</a> </button>
           <button class="navButtons"> <a id="navProjects" class="navLinks">Projects</a> </button>
     </div>
-
-    <img id="pageBG" src="imgs/pcBackground.jpg">
        
 </body>
 
