Custom font added

--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
 <body id="pageContent">
     <img id="pageBG" src="imgs/an60fKt.jpg">
     <div id="navContainer">
-        <img id="navLogo" class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
-          <button class="navButtons"> <a id="navBio" class="navLinks">Bio</a> </button>
-          <button class="navButtons"> <a id="navResume" class="navLinks">Resume</a> </button>
-          <button class="navButtons"> <a id="navContact" class="navLinks">Contacts</a> </button>
-          <button class="navButtons"> <a id="navProjects" class="navLinks">Projects</a> </button>
+          <button class="navButtons"> <a>Bio</a> </button>
+          <button class="navButtons"> <a>Resume</a> </button>
+          <img class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
+          <button class="navButtons"> <a>Contacts</a> </button>
+          <button class="navButtons"> <a>Projects</a> </button>
     </div>
-       
+    <div>
+        <img id="headShot1" src="imgs/headshot1.jpg">
+    </div>
+    <div>
+        <img id="headShot2" src="imgs/headshot2.jpg">
+    </div>
+    <div>
+        <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif"> 
+    </div>  
 </body>
 
 <footer>
