input more fonts

--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
           <button class="navButtons"> <a>Contacts</a> </button>
           <button class="navButtons"> <a>Projects</a> </button>
     </div>
-    <div>
-        <img id="headShot1" src="imgs/headshot1.jpg">
+    <div id="sect1">
+        <img id="headShot1" src="imgs/headshot1.jpg"> 
+        <h1></h1>
     </div>
-    <div>
+    <div id="sect2">
         <img id="headShot2" src="imgs/headshot2.jpg">
     </div>
-    <div>
+    <div id="sect3">
         <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif"> 
+    </div> 
+    <div id="sect4">
+        <img id="pageLogo" src="imgs/headshot5.jpg"> 
     </div>  
+
 </body>
 
 <footer>
