Front page frame complete

--- a/index.html
+++ b/index.html
@@ -12,26 +12,21 @@
 <body id="pageContent">
     <img id="pageBG" src="imgs/an60fKt.jpg">
     <div id="navContainer">
-          <button class="navButtons"> <a>Bio</a> </button>
-          <button class="navButtons"> <a>Resume</a> </button>
-          <img class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
-          <button class="navButtons"> <a>Contacts</a> </button>
-          <button class="navButtons"> <a>Projects</a> </button>
+        <button class="navButtons"> <a>Bio</a> </button>
+        <button class="navButtons"> <a>Resume</a> </button>
+        <img class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
+        <button class="navButtons"> <a>Contacts</a> </button>
+        <button class="navButtons"> <a>Projects</a> </button>
     </div>
     <div id="sect1">
-        <img id="headShot1" src="imgs/headshot1.jpg"> 
-        <h1></h1>
+        <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif">
+        <h2><u>HELLO AND WELCOME!</u></h2>
+        <h1>l</h1>
     </div>
-    <div id="sect2">
-        <img id="headShot2" src="imgs/headshot2.jpg">
+     <div id="sect2">
+    <img id="headShot1" src="imgs/headshot1.jpg">
+    <p>My name is Seth Johnson, former Welder, Laborer and current  immersive student at GA! </p>
     </div>
-    <div id="sect3">
-        <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif"> 
-    </div> 
-    <div id="sect4">
-        <img id="pageLogo" src="imgs/headshot5.jpg"> 
-    </div>  
-
 </body>
 
 <footer>
