--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="imgs/skull360.gif" type="image/gif">
+    <!--Gif does not work in chrome.... chrome kinda sucks 0-0-->
     <title>Portfolio</title>
 </head>
 
@@ -13,10 +15,10 @@
     <img id="pageBG" src="imgs/an60fKt.jpg">
     <div id="navContainer">
         <button class="navButtons"> <a>Bio</a> </button>
-        <button class="navButtons"> <a>Resume</a> </button>
+        <button class="navButtons"> <a href="./views/resume.html">Resume</a> </button>
         <img class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
-        <button class="navButtons"> <a>Contacts</a> </button>
         <button class="navButtons"> <a>Projects</a> </button>
+        <button class="navButtons"> <a>Contact Me</a> </button>
     </div>
     <div id="sect1">
         <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif">
