--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
         <h2><u>HELLO AND WELCOME!</u></h2>
         <h1>l</h1>
     </div>
-     <div id="sect2">
-    <img id="headShot1" src="imgs/headshot1.jpg">
-    <p>My name is Seth Johnson, former Welder, Laborer and current  immersive student at GA! </p>
+    <div id="sect2">
+        <img id="headShot1" src="imgs/headshot1.jpg">
+        <h3>My name is Seth Johnson, former Welder, Gas-Laborer and current immersive student at GA! </h3>
     </div>
+
+    <div id="bio">
+        <h3><u>A LITTLE ABOUT ME</u></h3>
+    </div>
+
 </body>
 
 <footer>
