Basic links fixed

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <button class="navButtons"> <a>Bio</a> </button>
         <button class="navButtons"> <a href="./views/resume.html">Resume</a> </button>
         <img class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
-        <button class="navButtons"> <a>Projects</a> </button>
-        <button class="navButtons"> <a>Contact Me</a> </button>
+        <button class="navButtons"> <a href="./views/projects.html">Projects</a> </button>
+        <button class="navButtons"> <a href="./views/contact.html">Contact Me</a> </button>
     </div>
     <div id="sect1">
         <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif">
