--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div id="bio">
-        <h3><u>A LITTLE ABOUT ME</u></h3>
+        <h3><u>A LITTLE MORE ABOUT ME</u></h3>
     </div>
 
 </body>
