--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
     </div>
 
     <div id="bio">
-        <h3><u>A LITTLE MORE ABOUT ME</u></h3>
+        <img id="bioPic1" src="imgs/biopic1.jpg">
+        <h3 class="BioHobbies"><u>MORE INFORMATION</u></h3>
+        <!--<p class="BioText"><p>-->
+        <h3 class="BioHobbies">Hobbies</h3>
+        <p class="BioText">Music</p>
+        <p class="BioText">Skateboarding</p>
+        <p class="BioText">Videogames</p>
+        <p class="BioText">Reading</p>
+        <p class="BioText">Writing</p>
+        <p class="BioText">Welding</p>
+        <p class="BioText">Working out</p>
     </div>
 
 </body>
