--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body id="pageContent">
     <img id="pageBG" src="imgs/bg1.jpg">
     <div id="navContainer">
-        <button class="navButtons"> <a>Bio</a> </button>
-        <button class="navButtons"> <a href="./views/resume.html">Resume</a> </button>
+        <button id="navButt1" class="navButtons"> <a>Bio</a> </button>
+        <button id="navButt2" class="navButtons"> <a href="./views/resume.html">Resume</a> </button>
         <img class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
-        <button class="navButtons"> <a href="./views/projects.html">Projects</a> </button>
-        <button class="navButtons"> <a href="./views/contact.html">Contact Me</a> </button>
+        <button id="navButt3" class="navButtons"> <a href="./views/projects.html">Projects</a> </button>
+        <button id="navButt4" class="navButtons"> <a href="./views/contact.html">Contact Me</a> </button>
     </div>
     <div id="sect1">
         <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif">
