added email links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" src="/views/app.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,16 +15,16 @@
 <body id="pageContent">
     <img id="pageBG" src="imgs/bg1.jpg">
     <div id="navContainer">
-        <button id="navButt1" class="navButtons"> <a>Bio</a> </button>
-        <button id="navButt2" class="navButtons"> <a href="./views/resume.html">Resume</a> </button>
-        <img class="navLinks" src="imgs/ezgif.com-gif-maker(5).gif">
-        <button  id="navButt3" class="navButtons"> <a href="./views/projects.html">Projects</a> </button>
-        <button  id="navButt4" class="navButtons"> <a href="./views/contact.html">Contact Me</a> </button>
+        <script type="text/javascript" src="app.js"></script>
+        <button id="btn" class="navButtons"> <a>Bio</a> </button>
+        <a href="./views/resume.html"><button id="btn" class="navButtons">Resume</button></a>
+        <img class="btn" src="imgs/ezgif.com-gif-maker(5).gif">
+        <a href="./views/projects.html"><button id="btn" class="navButtons">Projects</button></a>
+        <a href="./views/contact.html"><button id="btn" class="navButtons"> Contact Me</button></a>
     </div>
     <div id="sect1">
         <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif">
         <h2><u>HELLO AND WELCOME!</u></h2>
-        <h1>l</h1>
     </div>
     <div id="sect2">
         <img id="headShot1" src="imgs/headshot1.jpg">
@@ -31,16 +32,13 @@
     </div>
 
     <div id="bio">
-        <img id="bioPic1" src="imgs/biopic1.jpg">
-        <h3 class="BioHobbies"><u>MORE INFORMATION</u></h3>
-        <h3 class="BioHobbies">Hobbies</h3>
-        <p class="BioText">Music</p>
-        <p class="BioText">Skateboarding</p>
-        <p class="BioText">Videogames</p>
-        <p class="BioText">Reading</p>
-        <p class="BioText">Writing</p>
-        <p class="BioText">Welding</p>
-        <p class="BioText">Working out</p>
+        <p class="BioText">
+            I am an aspiring developer based in southern California,
+            and I decided to transition into tech to solve bigger problems
+            and discover a new set of skills. The entirety of my prior career was spent
+            in various aspects of the construction industry. I enjoy spending my free time
+            working out, skateboarding, reading and playing video games.
+        </p>
     </div>
 </body>
 
