Minor script tag adjustments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body id="pageContent">
     <img id="pageBG" src="imgs/bg1.jpg">
     <div id="navContainer">
-        <script type="text/javascript" src="app.js"></script>
+        <script type="text/javascript" src="app.js" defer></script>
         <button id="btn" class="navButtons"> <a>Bio</a> </button>
         <a href="./views/resume.html"><button id="btn" class="navButtons">Resume</button></a>
         <img class="btn" src="imgs/ezgif.com-gif-maker(5).gif">
