--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script type="text/javascript" src="/views/app.js"></script>
+    <script type="text/javascript" src="../bio.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,12 +15,11 @@
 <body id="pageContent">
     <img id="pageBG" src="imgs/bg1.jpg">
     <div id="navContainer">
-        <script type="text/javascript" src="app.js" defer></script>
-        <button id="btn" class="navButtons"> <a>Bio</a> </button>
+        <button class="navButtons"> <a>Bio</a> </button>
         <a href="./views/resume.html"><button id="btn" class="navButtons">Resume</button></a>
-        <img class="btn" src="imgs/ezgif.com-gif-maker(5).gif">
-        <a href="./views/projects.html"><button id="btn" class="navButtons">Projects</button></a>
-        <a href="./views/contact.html"><button id="btn" class="navButtons"> Contact Me</button></a>
+        <img src="imgs/ezgif.com-gif-maker(5).gif">
+        <a href="./views/projects.html"><button class="navButtons">Projects</button></a>
+        <a href="./views/contact.html"><button  class="navButtons"> Contact Me</button></a>
     </div>
     <div id="sect1">
         <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif">
