--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <a href="./views/projects.html"><button class="navButtons">Projects</button></a>
         <a href="./views/contact.html"><button  class="navButtons">Contact Me</button></a>
     </div>
-    <div id="sect1">
+    <div id="bio1">
         <img id="pageLogo" src="imgs/ezgif.com-gif-maker(4).gif">
         <h2><u>HELLO AND WELCOME!</u></h2>
     </div>
-    <div id="sect2">
+    <div id="bio2">
         <img id="headShot1" src="imgs/headshot1.jpg">
         <h3>My name is Seth Johnson, former Welder, Gas-Laborer and current immersive student at GA! </h3>
     </div>
 
-    <div id="bio">
+    <div id="bio3">
         <p class="BioText">
             I am an aspiring developer based in southern California,
             and I decided to transition into tech to solve bigger problems
@@ -39,9 +39,5 @@
         </p>
     </div>
 </body>
-
-<footer>
-
-</footer>
 
 </html>
